# PdfManager

./: .gitignore  README.md  pdf.py  pyproject.toml  setup.bat
.github/workflows/: build-and-release-win.yml
src/pdf_manager_lucapl/: PdfApp.py  pdfDeleter.py  pdfManagers.py  pdfMerger.py
